# XERtoCSV

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: convert.rs  main.rs
