[package]
name = "xertocsv"
version = "1.1.0"
edition = "2021"

[dependencies]
csv = "1.1"              # For handling CSV files
walkdir = "2.3"          # For directory traversal
eframe = "0.29"          # Cross-platform GUI (egui) for the desktop window
rfd = "0.15"             # Native "open folder / open file" dialogs
rust_xlsxwriter = "0.79" # For the master Excel workbook (one sheet per table)
encoding_rs = "0.8"      # Decode Windows-1252 (ANSI) P6 exports without corruption